EVE HAL Driver based on MBED
Minimum for initialization

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.creator.user
+
+example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.pro
