--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
@@ -2,6 +2,9 @@
 
 #define __MBED__
 #define DEVICE_SPI 1
+#define DEVICE_SERIAL 1
 #define PIO_FRAMEWORK_MBED_RTOS_PRESENT
 #define MBED_CONF_RTOS_API_PRESENT 1
 #define MBED_CONF_RTOS_PRESENT 1
+#define EVE_PD PB_2
+#define EVE_INTRPT PD_15
