--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
@@ -14,12 +14,16 @@ platform_packages = framework-mbed @ https://github.com/ARMmbed/mbed-os.git#mbed
 board = nucleo_f429zi
 framework = mbed
 
-build_flags = 
-	-std=gnu++14
+build_flags =
+;        -std=gnu++11
+;        -std=gnu++14
         -O0
         -g3
         -ggdb3
         -Wno-register
+        -D PIO_FRAMEWORK_MBED_RTOS_PRESENT
+        -D MBED_CONF_RTOS_API_PRESENT
+        -D MBED_CONF_RTOS_PRESENT
         -D STM32F429xx
         -D ARM_MATH_CM4
         -D TARGET_CORTEX
@@ -30,7 +34,7 @@ build_flags =
         -D TARGET_LIKE_MBED
         -D TARGET_M4
         -D TARGET_NUCLEO_F429ZI
-        -D TARGET_PSA
+;        -D TARGET_PSA
         -D TARGET_RTOS_M4_M7
         -D TARGET_STM
         -D TARGET_STM32F4
@@ -38,7 +42,7 @@ build_flags =
         -D TARGET_STM32F429ZI
         -D TARGET_STM32F429xI
         -D TARGET_STM32F429xx
-        -D TARGET_STM_EMAC
+;        -D TARGET_STM_EMAC
         -D TOOLCHAIN_GCC
         -D TOOLCHAIN_GCC_ARM
         -D USB_STM_HAL
@@ -48,10 +52,9 @@ build_flags =
         -D __CORTEX_M4
         -D __FPU_PRESENT
         -D __MBED_CMSIS_RTOS_CM
-        -D __MBED__
 
 build_unflags = -std=gnu++98
-                -std=gnu++14
+                -std=c98
                 -Og
                 -Os
                 -Wregister
