Reconfigure test project
add FT800-FT813 as library and fill mbed_lib.json

--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
@@ -1,4 +1,4 @@
-// Add predefined macros for your project here. For example:
+// Add predefined macros for your project here.
 
 #define __MBED__
 #define DEVICE_SPI 1
@@ -6,5 +6,10 @@
 #define PIO_FRAMEWORK_MBED_RTOS_PRESENT
 #define MBED_CONF_RTOS_API_PRESENT 1
 #define MBED_CONF_RTOS_PRESENT 1
+#define EVE_SPI_MOSI PF_9
+#define EVE_SPI_MISO PF_8
+#define EVE_SPI_CLK PF_7
+#define EVE_SPI_SSEL PF_12
 #define EVE_PD PB_2
 #define EVE_INTRPT PD_15
+
