- Add user attached callbacks to events - Add touchscreen calibration support - Add Thread, Events, and shared event queue support

--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
@@ -24,8 +24,10 @@ build_flags =
         -D PIO_FRAMEWORK_MBED_RTOS_PRESENT
         -D MBED_CONF_RTOS_API_PRESENT
         -D MBED_CONF_RTOS_PRESENT
+        -D MBED_CONF_EVENTS_PRESENT
         -D STM32F429xx
         -D ARM_MATH_CM4
+        -D DEVICE_INTERRUPTIN=1
         -D TARGET_CORTEX
         -D TARGET_CORTEX_M
         -D TARGET_FAMILY_STM32
