--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
@@ -3,9 +3,11 @@
 #define __MBED__
 #define DEVICE_SPI 1
 #define DEVICE_SERIAL 1
+#define DEVICE_INTERRUPTIN 1
 #define PIO_FRAMEWORK_MBED_RTOS_PRESENT
 #define MBED_CONF_RTOS_API_PRESENT 1
 #define MBED_CONF_RTOS_PRESENT 1
+#define MBED_CONF_EVENTS_PRESENT 1
 #define EVE_SPI_MOSI PF_9
 #define EVE_SPI_MISO PF_8
 #define EVE_SPI_CLK PF_7
