--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
@@ -54,6 +54,7 @@ build_flags =
         -D __CORTEX_M4
         -D __FPU_PRESENT
         -D __MBED_CMSIS_RTOS_CM
+        -D __MBED__
 
 build_unflags = -std=gnu++98
                 -std=c98
