--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.ini
@@ -15,8 +15,6 @@ board = nucleo_f429zi
 framework = mbed
 
 build_flags =
-;        -std=gnu++11
-;        -std=gnu++14
         -O0
         -g3
         -ggdb3
@@ -28,6 +26,7 @@ build_flags =
         -D STM32F429xx
         -D ARM_MATH_CM4
         -D DEVICE_INTERRUPTIN=1
+        -D DEVICE_STDIO_MESSAGES=1
         -D TARGET_CORTEX
         -D TARGET_CORTEX_M
         -D TARGET_FAMILY_STM32
@@ -36,7 +35,6 @@ build_flags =
         -D TARGET_LIKE_MBED
         -D TARGET_M4
         -D TARGET_NUCLEO_F429ZI
-;        -D TARGET_PSA
         -D TARGET_RTOS_M4_M7
         -D TARGET_STM
         -D TARGET_STM32F4
@@ -44,7 +42,6 @@ build_flags =
         -D TARGET_STM32F429ZI
         -D TARGET_STM32F429xI
         -D TARGET_STM32F429xx
-;        -D TARGET_STM_EMAC
         -D TOOLCHAIN_GCC
         -D TOOLCHAIN_GCC_ARM
         -D USB_STM_HAL
@@ -54,6 +51,7 @@ build_flags =
         -D __CORTEX_M4
         -D __FPU_PRESENT
         -D __MBED_CMSIS_RTOS_CM
+        -D __MBED=1
 
 build_unflags = -std=gnu++98
                 -std=c98
