--- a/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
+++ b/example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.config
@@ -4,6 +4,7 @@
 #define DEVICE_SPI 1
 #define DEVICE_SERIAL 1
 #define DEVICE_INTERRUPTIN 1
+#define DEVICE_LPTICKER 1
 #define PIO_FRAMEWORK_MBED_RTOS_PRESENT
 #define MBED_CONF_RTOS_API_PRESENT 1
 #define MBED_CONF_RTOS_PRESENT 1
