--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 example_projects/EVE_Test_MBED_NUCLEO-F429ZI/EVE_Test_MBED_NUCLEO-F429ZI.creator.user
 
 example_projects/EVE_Test_MBED_NUCLEO-F429ZI/platformio.pro
+
+*.autosave
